samples/_failures_safe/1761730256_cc12eb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8f21dbc2.c: In function ‘main’:
./samples/SAFE/__tmp_8f21dbc2.c:127:12: error: missing terminating " character
  127 |     printf("Available
      |            ^~~~~~~~~~
./samples/SAFE/__tmp_8f21dbc2.c:127:5: error: expected expression at end of input
  127 |     printf("Available
      |     ^~~~~~
./samples/SAFE/__tmp_8f21dbc2.c:127:5: error: expected declaration or statement at end of input
